force-app/main/default/objects/ExternalObject__c/ExternalObject__c.object-meta.xml
<CustomObject>
    <label>ExternalObject</label>
    <nameField>
        <label>ExternalObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExternalObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>