force-app/main/default/objects/ExternalObject__c/fields/body__c.field-meta.xml
<CustomField>
    <fullName>body__c</fullName>
    <label>body</label>
    <length>254</length>
    <type>Text</type>
</CustomField>