force-app/main/default/objects/ExternalObject__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <label>title</label>
    <length>254</length>
    <type>Text</type>
</CustomField>