force-app/main/default/objects/ExternalObject__c/fields/userId__c.field-meta.xml
<CustomField>
    <fullName>userId__c</fullName>
    <label>userId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>